--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         <section class="card" id="javascript-section">
             <h2>JavaScript</h2>
             <ul>
-                <li>Enter your JavaScript notes here</li>
+                <li>A variable is a named container that allows us to store data in our code.</li>
+                <li>Control flow is the order in whih a computer executes code in a script.</li>
+                <li>A computer will always read code from top to bottom.</li>
+                <li>An array is a single variable that is used to hold a group of data.</li>
+                <li>Arrays are typically used to hold data that is related in some way.</li>
+                <li>Arrays will always list starting with a zero(0), and increment from there.</li>
+                <li>Functions are a way of packaging functionality that you wish to reuse.</li>
+                <li>Variables include Strings, Numbers, Boolean, Array and Objects.</li>
             </ul>
         </section>
     </main>
